--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my_project_sparql",
+  "name": "meetings-validation-service",
   "version": "1.0.0",
-  "description": "",
+  "description": "This service allows you to validate a meeting.",
   "main": "app.js",
   "type": "module",
   "scripts": {
